cluster/apps/networking/dummy-test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-cert-test
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - dummy-cert-test.${SECRET_DOMAIN}
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
  rules:
    - host: dummy-cert-test.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-cert-test
                port:
                  number: 80
